force-app/main/default/objects/Contact/fields/Business_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Business_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Relationship</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>