force-app/main/default/objects/Contact/fields/Is_Embassy_Contact__c.field-meta.xml
<CustomField>
    <fullName>Is_Embassy_Contact__c</fullName>
    <formula>IF( RecordTypeId=&apos;0127Q00000172jR&apos;, &apos;Yes&apos;, &apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Embassy Contact?</label>
    <type>Text</type>
</CustomField>