force-app/main/default/objects/Contact/fields/Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Name__c</fullName>
    <formula>TEXT(Account.Legal_Entity_Name1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Entity Name</label>
    <type>Text</type>
</CustomField>