force-app/main/default/objects/Contact/fields/Preffered__c.field-meta.xml
<CustomField>
    <fullName>Preffered__c</fullName>
    <label>Preffered Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>