force-app/main/default/objects/Contact/fields/Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Name__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relationship Name</label>
    <type>Text</type>
</CustomField>