force-app/main/default/objects/Contact/recordTypes/Embassy_Contact.recordType-meta.xml
<RecordType>
    <fullName>Embassy_Contact</fullName>
    <active>false</active>
    <description>Created By team</description>
    <label>Embassy Contact</label>
</RecordType>