force-app/main/default/objects/Contact/recordTypes/Embassy_Contacts.recordType-meta.xml
<RecordType>
    <fullName>Embassy_Contacts</fullName>
    <active>true</active>
    <description>Select &quot;Embassy Contact&quot; to store details for a Embassy Contact record.</description>
    <label>Embassy Contacts</label>
</RecordType>