force-app/main/default/objects/Contact/validationRules/Work_phone_or_Home_phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Work_phone_or_Home_phone</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISBLANK (Phone),ISBLANK( HomePhone))</errorConditionFormula>
    <errorMessage>Please add either Business Phone or Mobile Phone</errorMessage>
</ValidationRule>